src/objects/XLR8_Assets_Liabilities__c.object
<CustomObject>
    <description>XLR8 custom object that holds Client Household Use Assets, Financial Assets, Retirement Assets and Liabilities data.</description>
    <fields>
        <fullName>AUM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this is a managed account.</inlineHelpText>
        <label>AUM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acquired_Opened_Date__c</fullName>
        <label>Acquired/Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amortization_Term__c</fullName>
        <inlineHelpText>Record the amortization terms in number of years.</inlineHelpText>
        <label>Amortization Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aquisition_Value__c</fullName>
        <label>Aquisition Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Classification__c</fullName>
        <label>Asset Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Cash &amp; Cash Equivalents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Reserve_Needs__c</fullName>
        <label>Cash Reserve Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cash_Value__c</fullName>
        <label>Cash Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>401K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>529 Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airplane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection (Artwork, Stamps, Coins)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Equity Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Tax Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited IRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited Roth IRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRA Rollover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrevocable Living Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margin Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Notes/Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property &amp; Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Residence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Writing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Writing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contingent_Beneficiary__c</fullName>
        <label>Contingent Beneficiary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contribution_Tax_Year__c</fullName>
        <label>Contribution Tax Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributions_Description_Notes__c</fullName>
        <label>Contributions Description/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Basis__c</fullName>
        <label>Cost Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custodian__c</fullName>
        <label>Custodian</label>
        <picklist>
            <picklistValues>
                <fullName>Fidelity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pershing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD Ameritrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe this debt&apos;s interest rate or terms.  E.g. 5 year adjustable arm with initial rate of 6.7%</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distributions_Description_Notes__c</fullName>
        <label>Distributions Description/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets &amp; Liabilities</relationshipLabel>
        <relationshipName>R00N40000001YLFUEA4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimated_Date__c</fullName>
        <label>Estimated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Value__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Payoff_Date__c</fullName>
        <label>Expected Payoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Deduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Deduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guarantors__c</fullName>
        <label>Guarantors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IRA_Contribution_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IRA Contribution Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for migration purposes only. It can be hidden post migration, or if no migration will be performed.</inlineHelpText>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_In_Net_Worth__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include In Net Worth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Loan_Amount__c</fullName>
        <label>Initial Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <picklist>
            <picklistValues>
                <fullName>AmSouth Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter One Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheviot Bldg &amp; Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citigroup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fifth Third Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Savings Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huntington Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National City Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwestern Mutual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwest Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Mutual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoples Community Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNC Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Union Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington Mutual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wells Fargo Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winton Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_IRA_Contribution_Amt__c</fullName>
        <label>Last IRA Contribution Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_IRA_Contribution_Date__c</fullName>
        <label>Last IRA Contribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_RMD_Amount__c</fullName>
        <label>Last RMD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_RMD_Date__c</fullName>
        <label>Last RMD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfunded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Beneficiary__c</fullName>
        <label>Primary Beneficiary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets &amp; Liabilities (Primary Owner)</relationshipLabel>
        <relationshipName>Assets_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMD_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMD Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMD Member</relationshipLabel>
        <relationshipName>R00N40000001Zq5kEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMD_Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMD Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets &amp; Liabilities (RMD Spouse)</relationshipLabel>
        <relationshipName>Assets_Liabilities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMD__c</fullName>
        <formula>IF( NOT(ISBLANK( RMD_Member__c )), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the RMD Member field is populated, then this checkbox will be automatically checked to indicate that the Retirement Account is required to take RMD.</inlineHelpText>
        <label>RMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Structure__c</fullName>
        <label>Rate Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <label>Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Property with R.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Tenants with R.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Tenants w/out R.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenants by Entirety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenants in Common</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repayment_Terms__c</fullName>
        <label>Repayment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Amortizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Payoff_Date__c</fullName>
        <label>Required Payoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restricted_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revolving_Loan__c</fullName>
        <label>Revolving Loan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLOA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Standing Letter of Authorization</inlineHelpText>
        <label>SLOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Comments__c</fullName>
        <label>Sale Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sale_Inactive_Date__c</fullName>
        <label>Sale/Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Beneficiary__c</fullName>
        <label>Secondary Beneficiary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets &amp; Liabilities (Secondary Owner)</relationshipLabel>
        <relationshipName>Assets_Liabilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Opening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIN_EIN__c</fullName>
        <label>TIN/EIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_RMD_Requirement_Records__c</fullName>
        <description>Calculates the amount of RMD Requirements</description>
        <label>Total RMD Requirement Records</label>
        <summaryFilterItems>
            <field>RMD_Requirement__c.RMD_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>RMD_Requirement__c.Financial_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trading_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trading Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN_HULL__c</fullName>
        <inlineHelpText>Enter the VIN (vehicle identification number) for the vehicle or for boats, enter the Hull number for both the boat and the motor.</inlineHelpText>
        <label>VIN/Hull #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Balance__c</fullName>
        <label>Value/Balance</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Assets &amp; Liabilities</label>
    <listViews>
        <fullName>All_Assets_Liabilities</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Value_Balance__c</columns>
        <columns>As_of_Date__c</columns>
        <columns>Acquired_Opened_Date__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets &amp; Liabilities</label>
    </listViews>
    <nameField>
        <label>Asset/Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets &amp; Liabilities</pluralLabel>
    <recordTypes>
        <fullName>Financial_Asset</fullName>
        <active>true</active>
        <description>Non-Retirement invested assets such as Brokerage or Limited Partnerships.</description>
        <label>Financial Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability</fullName>
        <active>true</active>
        <description>Principle balance of a debt amount - mortgages, auto loans, credit cards, etc.</description>
        <label>Liability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retirement_529_Plan_Asset</fullName>
        <active>true</active>
        <description>Individual Retirement Assets</description>
        <label>Retirement Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>UseAssets</fullName>
        <active>true</active>
        <description>Personal use assets such as a residence, automobile, collectible etc.</description>
        <label>Use Assets</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Liability_Negative_Needed</fullName>
        <active>true</active>
        <description>Confirms that the liability is entered as a negative number.</description>
        <errorConditionFormula>AND( $RecordType.Name = &quot;Liability&quot;,   Value_Balance__c  &gt;0)</errorConditionFormula>
        <errorDisplayField>Value_Balance__c</errorDisplayField>
        <errorMessage>Liability balances must be entered as a negative number ( example =  &quot;-100.00&quot;)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Account_Number_Update_When_RMD_Reqs</fullName>
        <active>true</active>
        <description>Do not allow Asset/Account Number to be updated on a Financial or Retirement Account once RMD Requirements with amounts exist.</description>
        <errorConditionFormula>AND(Total_RMD_Requirement_Records__c&gt;0,   NOT(PRIORVALUE(Name)=Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Asset/Account Number cannot be updated on Retirement Assets once RMD Requirements with values exist.</errorMessage>
    </validationRules>
</CustomObject>